--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "global": "^4.4.0",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
