--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "build": "^0.1.4",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "global": "^4.4.0",
